--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ repositories {
 
 dependencies {
   implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.7.10'
-  testImplementation 'org.jetbrains.kotlin:kotlin-test-junit:1.7.10'
+  testImplementation 'org.jetbrains.kotlin:kotlin-test:1.7.10'
 }
 
 javafx {
