Update to Kotlin 1.9.0 and IR JS compiler.

--- a/javafx/build.gradle
+++ b/javafx/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-  id 'org.jetbrains.kotlin.jvm' version '1.7.20'
+  id 'org.jetbrains.kotlin.jvm'
   id 'application'
   id 'org.openjfx.javafxplugin' version '0.0.13'
 }
