--- a/gutencraft/build.gradle
+++ b/gutencraft/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-  id 'org.jetbrains.kotlin.multiplatform' version '1.7.20'
+  id 'org.jetbrains.kotlin.multiplatform'
 }
 
 kotlin {
@@ -18,6 +18,6 @@ repositories {
 }
 
 dependencies {
-  commonMainApi 'org.jetbrains.kotlin:kotlin-stdlib:1.7.20'
-  commonTestImplementation 'org.jetbrains.kotlin:kotlin-test:1.7.20'
+  commonMainApi "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+  commonTestImplementation "org.jetbrains.kotlin:kotlin-test:$kotlinVersion"
 }
