--- a/web/build.gradle
+++ b/web/build.gradle
@@ -1,12 +1,12 @@
 plugins {
-  id 'org.jetbrains.kotlin.js' version '1.7.20'
+  id 'org.jetbrains.kotlin.js'
 }
 
 group 'com.nightlynexus'
 version '1.0-SNAPSHOT'
 
 kotlin {
-  js {
+  js(IR) {
     browser {
     }
     binaries.executable()
