Fix Java version.

--- a/javafx/build.gradle
+++ b/javafx/build.gradle
@@ -47,6 +47,11 @@ javafx {
   modules = ['javafx.controls', 'javafx.graphics']
 }
 
+java {
+  sourceCompatibility = JavaVersion.VERSION_1_8
+  targetCompatibility = JavaVersion.VERSION_1_8
+}
+
 compileKotlin {
   kotlinOptions.jvmTarget = "1.8"
 }
